[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/levels/baseball.gd" type="Script" id=1]
[ext_resource path="res://Personnages/personnage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objets/le-mur-avec-colision.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/sceneChangerButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objets/crate.tscn" type="PackedScene" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 322.341, 220.397 )

[node name="bow" parent="player" index="0"]
activateCrateArrow = true
arrowsAreModifiable = true

[node name="camera" parent="player" instance=ExtResource( 5 )]
position = Vector2( 20.6592, 35.6035 )
scale = Vector2( 0.0260409, 0.0260409 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="player/camera"]

[node name="change_scene_button" parent="player/camera/CanvasLayer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.049
margin_left = 3.41422
margin_top = 0.82843
margin_right = 123.414
margin_bottom = 42.8284
text = "Quitter le niveau"
next_scene_path = "res://Menu/menuPrincipal.tscn"

[node name="KinematicBody2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 1.01186, 423.446 )

[node name="KinematicBody2D59" parent="." instance=ExtResource( 3 )]
position = Vector2( -65.4562, 423.445 )

[node name="KinematicBody2D60" parent="." instance=ExtResource( 3 )]
position = Vector2( -137.581, 423.445 )

[node name="KinematicBody2D61" parent="." instance=ExtResource( 3 )]
position = Vector2( -210.165, 423.445 )

[node name="KinematicBody2D62" parent="." instance=ExtResource( 3 )]
position = Vector2( -284.164, 423.445 )

[node name="KinematicBody2D63" parent="." instance=ExtResource( 3 )]
position = Vector2( -358.163, 423.445 )

[node name="KinematicBody2D64" parent="." instance=ExtResource( 3 )]
position = Vector2( -358.163, 353.651 )

[node name="KinematicBody2D65" parent="." instance=ExtResource( 3 )]
position = Vector2( -358.163, 280 )

[node name="KinematicBody2D66" parent="." instance=ExtResource( 3 )]
position = Vector2( -358.163, 208.787 )

[node name="KinematicBody2D67" parent="." instance=ExtResource( 3 )]
position = Vector2( -358.163, 137 )

[node name="KinematicBody2D68" parent="." instance=ExtResource( 3 )]
position = Vector2( -358.163, 72.2284 )

[node name="KinematicBody2D69" parent="." instance=ExtResource( 3 )]
position = Vector2( -339.663, 9.24986 )
rotation = 0.261799

[node name="KinematicBody2D70" parent="." instance=ExtResource( 3 )]
position = Vector2( -321.163, -60.5445 )
rotation = 0.243896

[node name="KinematicBody2D71" parent="." instance=ExtResource( 3 )]
position = Vector2( -287.527, -115.203 )
rotation = 0.523598

[node name="KinematicBody2D72" parent="." instance=ExtResource( 3 )]
position = Vector2( -250.528, -179.111 )
rotation = 0.523598

[node name="KinematicBody2D2" parent="." instance=ExtResource( 3 )]
position = Vector2( 74.8312, 423.446 )

[node name="KinematicBody2D3" parent="." instance=ExtResource( 3 )]
position = Vector2( 148.65, 423.446 )

[node name="KinematicBody2D4" parent="." instance=ExtResource( 3 )]
position = Vector2( 221.093, 423.446 )

[node name="KinematicBody2D5" parent="." instance=ExtResource( 3 )]
position = Vector2( 294.912, 423.446 )

[node name="KinematicBody2D6" parent="." instance=ExtResource( 3 )]
position = Vector2( 368.731, 423.446 )

[node name="KinematicBody2D7" parent="." instance=ExtResource( 3 )]
position = Vector2( 441.538, 423.446 )

[node name="KinematicBody2D8" parent="." instance=ExtResource( 3 )]
position = Vector2( 515.632, 423.446 )

[node name="KinematicBody2D9" parent="." instance=ExtResource( 3 )]
position = Vector2( 589.451, 423.446 )

[node name="KinematicBody2D10" parent="." instance=ExtResource( 3 )]
position = Vector2( 663.271, 423.446 )

[node name="KinematicBody2D11" parent="." instance=ExtResource( 3 )]
position = Vector2( 737.09, 423.446 )

[node name="KinematicBody2D12" parent="." instance=ExtResource( 3 )]
position = Vector2( 810.909, 423.446 )

[node name="KinematicBody2D13" parent="." instance=ExtResource( 3 )]
position = Vector2( 884.728, 423.446 )

[node name="KinematicBody2D14" parent="." instance=ExtResource( 3 )]
position = Vector2( 955.844, 423.446 )

[node name="KinematicBody2D15" parent="." instance=ExtResource( 3 )]
position = Vector2( 1029.57, 423.446 )

[node name="KinematicBody2D16" parent="." instance=ExtResource( 3 )]
position = Vector2( 1103.39, 423.446 )

[node name="KinematicBody2D17" parent="." instance=ExtResource( 3 )]
position = Vector2( 1177.21, 423.446 )

[node name="KinematicBody2D18" parent="." instance=ExtResource( 3 )]
position = Vector2( 1248.24, 423.446 )

[node name="KinematicBody2D19" parent="." instance=ExtResource( 3 )]
position = Vector2( 1322.27, 423.446 )

[node name="KinematicBody2D20" parent="." instance=ExtResource( 3 )]
position = Vector2( 1396.09, 423.446 )

[node name="KinematicBody2D21" parent="." instance=ExtResource( 3 )]
position = Vector2( 1468.68, 423.446 )

[node name="KinematicBody2D22" parent="." instance=ExtResource( 3 )]
position = Vector2( 1542.36, 423.446 )

[node name="KinematicBody2D23" parent="." instance=ExtResource( 3 )]
position = Vector2( 1616.45, 423.446 )

[node name="KinematicBody2D24" parent="." instance=ExtResource( 3 )]
position = Vector2( 1688.77, 423.446 )

[node name="KinematicBody2D25" parent="." instance=ExtResource( 3 )]
position = Vector2( 1763.4, 423.446 )

[node name="KinematicBody2D26" parent="." instance=ExtResource( 3 )]
position = Vector2( 1837.49, 423.446 )

[node name="KinematicBody2D27" parent="." instance=ExtResource( 3 )]
position = Vector2( 1911.41, 423.445 )

[node name="KinematicBody2D28" parent="." instance=ExtResource( 3 )]
position = Vector2( 1983.48, 423.446 )

[node name="KinematicBody2D29" parent="." instance=ExtResource( 3 )]
position = Vector2( 2057.3, 423.993 )

[node name="KinematicBody2D30" parent="." instance=ExtResource( 3 )]
position = Vector2( 2129.89, 423.446 )

[node name="KinematicBody2D31" parent="." instance=ExtResource( 3 )]
position = Vector2( 2204.03, 423.446 )

[node name="KinematicBody2D32" parent="." instance=ExtResource( 3 )]
position = Vector2( 2278.02, 423.446 )

[node name="KinematicBody2D33" parent="." instance=ExtResource( 3 )]
position = Vector2( 2351.84, 423.446 )

[node name="KinematicBody2D34" parent="." instance=ExtResource( 3 )]
position = Vector2( 2425.66, 423.446 )

[node name="KinematicBody2D35" parent="." instance=ExtResource( 3 )]
position = Vector2( 2498.2, 423.446 )

[node name="KinematicBody2D36" parent="." instance=ExtResource( 3 )]
position = Vector2( 2570.42, 423.446 )

[node name="KinematicBody2D37" parent="." instance=ExtResource( 3 )]
position = Vector2( 2644.14, 423.446 )

[node name="KinematicBody2D38" parent="." instance=ExtResource( 3 )]
position = Vector2( 2718.23, 423.446 )

[node name="KinematicBody2D39" parent="." instance=ExtResource( 3 )]
position = Vector2( 2790.55, 423.446 )

[node name="KinematicBody2D40" parent="." instance=ExtResource( 3 )]
position = Vector2( 2864.56, 423.445 )

[node name="KinematicBody2D41" parent="." instance=ExtResource( 3 )]
position = Vector2( 2938.38, 423.445 )

[node name="KinematicBody2D42" parent="." instance=ExtResource( 3 )]
position = Vector2( 3010.73, 423.445 )

[node name="KinematicBody2D43" parent="." instance=ExtResource( 3 )]
position = Vector2( 3084.76, 423.445 )

[node name="KinematicBody2D44" parent="." instance=ExtResource( 3 )]
position = Vector2( 3158.58, 423.446 )

[node name="KinematicBody2D45" parent="." instance=ExtResource( 3 )]
position = Vector2( 3231.07, 423.446 )

[node name="KinematicBody2D46" parent="." instance=ExtResource( 3 )]
position = Vector2( 3304.75, 423.446 )

[node name="KinematicBody2D47" parent="." instance=ExtResource( 3 )]
position = Vector2( 3378.84, 423.446 )

[node name="KinematicBody2D48" parent="." instance=ExtResource( 3 )]
position = Vector2( 3454.53, 423.445 )

[node name="KinematicBody2D73" parent="." instance=ExtResource( 3 )]
position = Vector2( 3528.63, 423.445 )

[node name="KinematicBody2D81" parent="." instance=ExtResource( 3 )]
position = Vector2( 7055.11, 846.891 )

[node name="KinematicBody2D74" parent="." instance=ExtResource( 3 )]
position = Vector2( 3602.45, 423.445 )

[node name="KinematicBody2D98" parent="." instance=ExtResource( 3 )]
position = Vector2( 3602.54, 497.445 )

[node name="KinematicBody2D99" parent="." instance=ExtResource( 3 )]
position = Vector2( 3602.45, 571.445 )

[node name="KinematicBody2D100" parent="." instance=ExtResource( 3 )]
position = Vector2( 3528.72, 571.445 )

[node name="KinematicBody2D101" parent="." instance=ExtResource( 3 )]
position = Vector2( 3454.9, 571.445 )

[node name="KinematicBody2D102" parent="." instance=ExtResource( 3 )]
position = Vector2( 3378.93, 571.445 )

[node name="KinematicBody2D103" parent="." instance=ExtResource( 3 )]
position = Vector2( 3304.89, 571.445 )

[node name="KinematicBody2D104" parent="." instance=ExtResource( 3 )]
position = Vector2( 3232.4, 571.445 )

[node name="KinematicBody2D105" parent="." instance=ExtResource( 3 )]
position = Vector2( 3158.67, 571.719 )

[node name="KinematicBody2D106" parent="." instance=ExtResource( 3 )]
position = Vector2( 3084.85, 571.445 )

[node name="KinematicBody2D107" parent="." instance=ExtResource( 3 )]
position = Vector2( 3010.73, 571.445 )

[node name="KinematicBody2D108" parent="." instance=ExtResource( 3 )]
position = Vector2( 2938.47, 571.445 )

[node name="KinematicBody2D109" parent="." instance=ExtResource( 3 )]
position = Vector2( 2864.65, 571.445 )

[node name="KinematicBody2D110" parent="." instance=ExtResource( 3 )]
position = Vector2( 2792.05, 571.445 )

[node name="KinematicBody2D111" parent="." instance=ExtResource( 3 )]
position = Vector2( 2717.96, 571.445 )

[node name="KinematicBody2D112" parent="." instance=ExtResource( 3 )]
position = Vector2( 2644.24, 571.992 )

[node name="KinematicBody2D113" parent="." instance=ExtResource( 3 )]
position = Vector2( 2572.02, 572.389 )

[node name="KinematicBody2D114" parent="." instance=ExtResource( 3 )]
position = Vector2( 2499.48, 571.445 )

[node name="KinematicBody2D115" parent="." instance=ExtResource( 3 )]
position = Vector2( 2425.75, 572.662 )

[node name="KinematicBody2D116" parent="." instance=ExtResource( 3 )]
position = Vector2( 2351.93, 571.445 )

[node name="KinematicBody2D117" parent="." instance=ExtResource( 3 )]
position = Vector2( 2277.85, 571.445 )

[node name="KinematicBody2D118" parent="." instance=ExtResource( 3 )]
position = Vector2( 2204.12, 572.936 )

[node name="KinematicBody2D119" parent="." instance=ExtResource( 3 )]
position = Vector2( 2131.12, 573.209 )
rotation = -0.0223513

[node name="KinematicBody2D120" parent="." instance=ExtResource( 3 )]
position = Vector2( 2057.3, 573.21 )

[node name="KinematicBody2D121" parent="." instance=ExtResource( 3 )]
position = Vector2( 1985.23, 573.21 )

[node name="KinematicBody2D122" parent="." instance=ExtResource( 3 )]
position = Vector2( 1911.31, 571.445 )
rotation = 0.00599428

[node name="KinematicBody2D123" parent="." instance=ExtResource( 3 )]
position = Vector2( 1837.22, 571.445 )
rotation = 0.00599428

[node name="KinematicBody2D124" parent="." instance=ExtResource( 3 )]
position = Vector2( 1762.59, 571.445 )
rotation = 0.00599428

[node name="KinematicBody2D125" parent="." instance=ExtResource( 3 )]
position = Vector2( 1690.27, 571.445 )
rotation = 0.00599428

[node name="KinematicBody2D126" parent="." instance=ExtResource( 3 )]
position = Vector2( 1616.54, 571.445 )
rotation = 0.00599428

[node name="KinematicBody2D127" parent="." instance=ExtResource( 3 )]
position = Vector2( 1542.36, 571.445 )
rotation = 0.00599428

[node name="KinematicBody2D128" parent="." instance=ExtResource( 3 )]
position = Vector2( 1468.77, 571.445 )
rotation = 0.00599428

[node name="KinematicBody2D129" parent="." instance=ExtResource( 3 )]
position = Vector2( 1396.09, 571.445 )
rotation = 0.00599428

[node name="KinematicBody2D130" parent="." instance=ExtResource( 3 )]
position = Vector2( 1322.36, 571.445 )
rotation = 0.00599428

[node name="KinematicBody2D131" parent="." instance=ExtResource( 3 )]
position = Vector2( 1251.03, 571.445 )
rotation = 0.00599428

[node name="KinematicBody2D132" parent="." instance=ExtResource( 3 )]
position = Vector2( 1177.3, 571.445 )
rotation = 0.00599428

[node name="KinematicBody2D133" parent="." instance=ExtResource( 3 )]
position = Vector2( 1103.48, 571.445 )
rotation = 0.00599428

[node name="KinematicBody2D134" parent="." instance=ExtResource( 3 )]
position = Vector2( 1029.57, 571.445 )

[node name="KinematicBody2D135" parent="." instance=ExtResource( 3 )]
position = Vector2( 955.937, 571.445 )

[node name="KinematicBody2D136" parent="." instance=ExtResource( 3 )]
position = Vector2( 884.728, 571.445 )

[node name="KinematicBody2D137" parent="." instance=ExtResource( 3 )]
position = Vector2( 811.002, 571.445 )

[node name="KinematicBody2D138" parent="." instance=ExtResource( 3 )]
position = Vector2( 737.183, 571.445 )

[node name="KinematicBody2D139" parent="." instance=ExtResource( 3 )]
position = Vector2( 663.364, 571.445 )

[node name="KinematicBody2D140" parent="." instance=ExtResource( 3 )]
position = Vector2( 589.544, 571.445 )

[node name="KinematicBody2D141" parent="." instance=ExtResource( 3 )]
position = Vector2( 515.357, 571.445 )

[node name="KinematicBody2D142" parent="." instance=ExtResource( 3 )]
position = Vector2( 441.538, 571.445 )

[node name="KinematicBody2D143" parent="." instance=ExtResource( 3 )]
position = Vector2( 368.731, 571.445 )

[node name="KinematicBody2D144" parent="." instance=ExtResource( 3 )]
position = Vector2( 294.912, 571.445 )

[node name="KinematicBody2D145" parent="." instance=ExtResource( 3 )]
position = Vector2( 222.469, 571.445 )

[node name="KinematicBody2D146" parent="." instance=ExtResource( 3 )]
position = Vector2( 148.743, 571.445 )

[node name="KinematicBody2D147" parent="." instance=ExtResource( 3 )]
position = Vector2( 74.9241, 571.445 )

[node name="KinematicBody2D148" parent="." instance=ExtResource( 3 )]
position = Vector2( 2.56327, 570.775 )

[node name="KinematicBody2D149" parent="." instance=ExtResource( 3 )]
position = Vector2( -65.4562, 570.775 )

[node name="KinematicBody2D150" parent="." instance=ExtResource( 3 )]
position = Vector2( -137.581, 570.775 )

[node name="KinematicBody2D151" parent="." instance=ExtResource( 3 )]
position = Vector2( -210.072, 570.775 )

[node name="KinematicBody2D152" parent="." instance=ExtResource( 3 )]
position = Vector2( -284.071, 570.775 )

[node name="KinematicBody2D153" parent="." instance=ExtResource( 3 )]
position = Vector2( -358.163, 570.775 )

[node name="KinematicBody2D154" parent="." instance=ExtResource( 3 )]
position = Vector2( -433.673, 570.775 )

[node name="KinematicBody2D155" parent="." instance=ExtResource( 3 )]
position = Vector2( -504.464, 570.775 )

[node name="KinematicBody2D156" parent="." instance=ExtResource( 3 )]
position = Vector2( -504.371, 497.993 )

[node name="KinematicBody2D157" parent="." instance=ExtResource( 3 )]
position = Vector2( -504.371, 424.267 )

[node name="KinematicBody2D159" parent="." instance=ExtResource( 3 )]
position = Vector2( -504.464, 353.651 )

[node name="KinematicBody2D160" parent="." instance=ExtResource( 3 )]
position = Vector2( -504.464, 282.787 )

[node name="KinematicBody2D161" parent="." instance=ExtResource( 3 )]
position = Vector2( -504.464, 208.274 )

[node name="KinematicBody2D162" parent="." instance=ExtResource( 3 )]
position = Vector2( -504.278, 137 )

[node name="KinematicBody2D163" parent="." instance=ExtResource( 3 )]
position = Vector2( -504.464, 62.4339 )

[node name="KinematicBody2D158" parent="." instance=ExtResource( 3 )]
position = Vector2( -433.58, 424.267 )

[node name="KinematicBody2D82" parent="." instance=ExtResource( 3 )]
position = Vector2( 7055.11, 777.097 )

[node name="KinematicBody2D75" parent="." instance=ExtResource( 3 )]
position = Vector2( 3602.45, 353.651 )

[node name="KinematicBody2D83" parent="." instance=ExtResource( 3 )]
position = Vector2( 7055.11, 703.446 )

[node name="KinematicBody2D76" parent="." instance=ExtResource( 3 )]
position = Vector2( 3602.45, 280 )

[node name="KinematicBody2D84" parent="." instance=ExtResource( 3 )]
position = Vector2( 7055.11, 631.446 )

[node name="KinematicBody2D77" parent="." instance=ExtResource( 3 )]
position = Vector2( 3602.45, 208 )

[node name="KinematicBody2D85" parent="." instance=ExtResource( 3 )]
position = Vector2( 7057.68, 542.591 )
rotation = -0.00600462

[node name="KinematicBody2D78" parent="." instance=ExtResource( 3 )]
position = Vector2( 3602.54, 139.884 )
rotation = -0.00600462

[node name="KinematicBody2D96" parent="." instance=ExtResource( 3 )]
position = Vector2( 3602.45, 72.2284 )
rotation = -0.00600462

[node name="KinematicBody2D97" parent="." instance=ExtResource( 3 )]
position = Vector2( 3602.45, 7.62939e-06 )
rotation = -0.00600462

[node name="KinematicBody2D86" parent="." instance=ExtResource( 3 )]
position = Vector2( 6907.37, 787.841 )

[node name="KinematicBody2D49" parent="." instance=ExtResource( 3 )]
position = Vector2( 3454.71, 364.395 )

[node name="KinematicBody2D87" parent="." instance=ExtResource( 3 )]
position = Vector2( 6906.24, 654.446 )

[node name="KinematicBody2D50" parent="." instance=ExtResource( 3 )]
position = Vector2( 3453.58, 231 )

[node name="KinematicBody2D88" parent="." instance=ExtResource( 3 )]
position = Vector2( 6907.47, 585.543 )

[node name="KinematicBody2D52" parent="." instance=ExtResource( 3 )]
position = Vector2( 3454.81, 162.097 )

[node name="KinematicBody2D89" parent="." instance=ExtResource( 3 )]
position = Vector2( 6884.31, -373.467 )
rotation = -0.261799

[node name="KinematicBody2D53" parent="." instance=ExtResource( 3 )]
position = Vector2( 3439.7, 111.128 )
rotation = -0.261799

[node name="KinematicBody2D90" parent="." instance=ExtResource( 3 )]
position = Vector2( 6863.55, -445.202 )
rotation = -0.261799

[node name="KinematicBody2D54" parent="." instance=ExtResource( 3 )]
position = Vector2( 3418.94, 39.3936 )
rotation = -0.261799

[node name="KinematicBody2D91" parent="." instance=ExtResource( 3 )]
position = Vector2( 6591.5, -1366.47 )
rotation = -0.523598

[node name="KinematicBody2D55" parent="." instance=ExtResource( 3 )]
position = Vector2( 3389.68, -6.85628 )
rotation = -0.523598

[node name="KinematicBody2D92" parent="." instance=ExtResource( 3 )]
position = Vector2( 6554.69, -1429.71 )
rotation = -0.523598

[node name="KinematicBody2D56" parent="." instance=ExtResource( 3 )]
position = Vector2( 3352.87, -70.0959 )
rotation = -0.523598

[node name="KinematicBody2D93" parent="." instance=ExtResource( 3 )]
position = Vector2( 6055.93, -2246.99 )
rotation = -0.785397

[node name="KinematicBody2D57" parent="." instance=ExtResource( 3 )]
position = Vector2( 3315.11, -105.019 )
rotation = -0.785397

[node name="KinematicBody2D94" parent="." instance=ExtResource( 3 )]
position = Vector2( 6003.08, -2299.85 )
rotation = -0.785397

[node name="KinematicBody2D58" parent="." instance=ExtResource( 3 )]
position = Vector2( 3262.26, -157.876 )
rotation = -0.785397

[node name="KinematicBody2D95" parent="." instance=ExtResource( 3 )]
position = Vector2( 6907.28, 722.706 )

[node name="KinematicBody2D51" parent="." instance=ExtResource( 3 )]
position = Vector2( 3454.62, 299.26 )

[node name="crate" parent="." instance=ExtResource( 6 )]
position = Vector2( 550.2, 364.395 )

[node name="speed_modifier" type="HSlider" parent="."]
margin_left = 277.0
margin_top = 108.0
margin_right = 538.0
margin_bottom = 183.0
max_value = 10000.0
step = 100.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 304.782
margin_top = 102.0
margin_right = 478.782
margin_bottom = 137.0
text = "vitesse flèches"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 13.0
margin_top = 174.0
margin_right = 260.0
margin_bottom = 203.0
text = "Nombres de boîtes par flèche de boîte"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crate_modifier" type="HSlider" parent="."]
margin_left = 26.0
margin_top = 200.0
margin_right = 258.0
margin_bottom = 306.0
max_value = 50.0
step = 5.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="force_arrow" type="HSlider" parent="."]
margin_left = 558.0
margin_top = 208.0
margin_right = 749.0
margin_bottom = 280.0
max_value = 700.0
step = 100.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 562.0
margin_top = 153.0
margin_right = 867.0
margin_bottom = 231.0
text = "Force des flèches"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KinematicBody2D79" parent="." instance=ExtResource( 3 )]
position = Vector2( 6907.19, 846.891 )

[node name="KinematicBody2D80" parent="." instance=ExtResource( 3 )]
position = Vector2( 6981.29, 846.891 )

[connection signal="value_changed" from="speed_modifier" to="." method="_on_speed_modifier_value_changed"]
[connection signal="value_changed" from="crate_modifier" to="." method="_on_crate_modifier_value_changed"]
[connection signal="value_changed" from="force_arrow" to="." method="_on_force_arrow_value_changed"]

[editable path="player"]
